--- a/public/login.html
+++ b/public/login.html
@@ -2,22 +2,39 @@
 
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>What's For Dinner? - Login</title>
-        <link href="css/login.css" rel="stylesheet">
-        <meta name="keywords" content="">
-        <meta name="author" content="Demetri Cassidy, Jack Schnair, Joshua Sullivan">
+        <link href="css/login.css" rel="stylesheet" />
+        <meta name="keywords" content="" />
+        <meta
+            name="author"
+            content="Demetri Cassidy, Jack Schnair, Joshua Sullivan"
+        />
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     </head>
     <body>
         <h1>What's For Dinner?</h1>
         <h2>Login Page</h2>
-        <div class="login-field">
-            <input type="email" name="form-control" id="email" placeholder="name@example.com">
-        </div>
-        <div class="login-field">
-            <input type="password" name="form-control" id="password" placeholder="Password">
-        </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <form action="/auth" method="post">
+            <div class="login-field">
+                <input
+                    type="email"
+                    name="username"
+                    id="email"
+                    placeholder="name@example.com"
+                    required
+                />
+            </div>
+            <div class="login-field">
+                <input
+                    type="password"
+                    name="password"
+                    id="password"
+                    placeholder="Password"
+                    required
+                />
+            </div>
+            <input class="submit-button" type="submit" value="Submit" />
+        </form>
     </body>
 </html>
