--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,15 @@
                 </div>
 
                 <div id="Calendar" class="tabcontent" style="overflow: auto;">
-                    <table style="border-collapse: collapse; padding: 0px; max-width: 100%; margin-left:auto; margin-right:auto;"></table>
+                    <table class="calendarTable" style="border-collapse: collapse; padding: 0px; max-width: 100%; margin-left:auto; margin-right:auto;"></table>
                   </div>
 
-                  <div id="Shopping List" class="tabcontent">
-                    <p id="shopping_lists">Shopping List tab</p>
-                    <script src=".\js\grocery.js"></script>
+                  <div id="Shopping List" class="tabcontent" style="overflow: auto;">
+                    <table class="recipeTable" style="border-collapse: collapse; padding: 0px; max-width: 100%; margin-left:auto; margin-right:auto;"></table>
                   </div>
 
                   <div id="Recipes" class="tabcontent">
-                    <p id="recipe_list">Recipes Tab</p>
+                    <p id="recipe_list"></p>
                     <script src=".\js\recipe.js"></script>
                   </div>
 
