fixed shopping list

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,10 @@
                     <table class="calendarTable" style="border-collapse: collapse; padding: 0px; max-width: 100%; margin-left:auto; margin-right:auto;"></table>
                   </div>
 
-                  <div id="Shopping List" class="tabcontent" style="overflow: auto;">
-                    <table class="recipeTable" style="border-collapse: collapse; padding: 0px; max-width: 100%; margin-left:auto; margin-right:auto;"></table>
-                  </div>
+                  <div id="Shopping List" class="tabcontent">
+                    <p id="shopping_lists"></p>
+                    <script src=".\js\grocery.js"></script>                  
+                </div>
 
                   <div id="Recipes" class="tabcontent">
                     <p id="recipe_list"></p>
