added ability for login information to be displayed in top right corner

--- a/public/home.html
+++ b/public/home.html
@@ -16,6 +16,10 @@
             <header>
             </header>
 
+            <div id="login-info" align="right">
+                Logged in as: <%= username %>
+            </div>
+
             <h1>What's For Dinner?</h1>
 
             <div id="content">
