Added ability to create lists and recipes

--- a/public/home.html
+++ b/public/home.html
@@ -36,11 +36,14 @@
 
                   <div id="Shopping List" class="tabcontent">
                     <p id="shopping_lists"></p>
+                    <input type="button" onclick="location.href='groceryList.html';" value="Create a new list" />
+                    <input type="button" onclick="clearLists()" value="Clear Lists" />
                     <script src=".\js\grocery.js"></script>                  
                 </div>
 
                   <div id="Recipes" class="tabcontent">
                     <p id="recipe_list"></p>
+                    <input type="button" onclick="location.href='recipe.html';" value="Create a recipe" />
                     <script src=".\js\recipe.js"></script>
                   </div>
 
