edited back buttons in groceryList.html and recipe.html

--- a/public/groceryList.html
+++ b/public/groceryList.html
@@ -12,6 +12,6 @@
 
         </div>
         <ul id="myUL"></ul>
-        <input type="button" onclick="location.href='home.html';" value="Back" />
+        <input type="button" onclick="location.href='home';" value="Back" />
   <script src="js/groceryListScript.js"></script>
 </html>
